--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,7 +65,32 @@ body {
   background-color: green;
   color: white;
 }
-
+.delete-button {
+  position: absolute;
+  top: 75px;
+  right: 25px;
+  border: 1px solid grey;
+  padding: 5px 10px;
+  background-color: red;
+  color: white;
+}
+.delete-button:hover {
+  background-color: black;
+  color: white;
+}
+.update-button {
+  position: absolute;
+  top: 125px;
+  right: 25px;
+  border: 1px solid grey;
+  padding: 5px 10px;
+  background-color: blue;
+  color: white;
+}
+.update-button:hover {
+  background-color: black;
+  color: white;
+}
 .home-button {
   padding: 5px 10px;
   background-color: lightskyblue;
@@ -74,4 +99,11 @@ body {
 .movie-warning {
   color: red;
   text-align: center;
+}
+
+.form {
+  display: grid;
+  grid-template-columns: 100px auto;
+  grid-gap: 5px;
+  padding: 10px;
 }
